--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -195,6 +195,7 @@ a.return-link:hover {
 	text-decoration: none;
 }
 
+.modal .modal-body > h3,
 .panel-concern .panel-body > h3 {
 	margin-top: 0;
 }
