--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -1,6 +1,8 @@
 <section ng-controller="SettingsController">
 
-<a href ui-sref='eao.projects' class='pull-right return-link'>Return to Project List</a>
+  <div class="container-fluid text-right">
+       <p> <a href ui-sref='eao.projects' class='return-link'>Return to Project List</a></p>
+  </div>
   <div class="container">
     <div class="panel panel-default">
       <div class="panel-heading">
