--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title">Contribute a Comment</h3>
+	<h3 class="modal-title">Submit a Comment</h3>
 </div>
 
 <div class="modal-body" ng-if="publicComment.step === 1">
