--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -448,7 +448,8 @@ nav {
   margin-bottom: 0; }
 
 .task-list li {
-  padding-bottom: 5px; }
+  padding-bottom: 5px;
+  position: relative; }
 
 .task-list li .task-current-status {
   font-weight: 700; }
@@ -460,6 +461,15 @@ nav {
 
 .task-list li button.btn-layer {
   white-space: normal; }
+
+.task-permission-control {
+  display: none;
+  position: absolute;
+  right: 3px;
+  bottom: 5px; }
+
+.task-list li:hover .task-permission-control {
+  display: block; }
 
 .no-lower-padding {
   padding-bottom: 0 !important; }
