--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -518,6 +518,7 @@ nav {
 
 .task-list li {
 	padding-bottom: 5px;
+	position: relative;
 }
 .task-list li .task-current-status {
 	font-weight: 700;
@@ -530,6 +531,18 @@ nav {
 .task-list li button.btn-layer {
 	white-space: normal;
 }
+
+.task-permission-control {
+	display: none;
+	position: absolute;
+	right: 3px;
+	bottom: 5px;
+}
+
+.task-list li:hover .task-permission-control {
+	display: block;
+}
+
 
 
 .no-lower-padding {
